[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 169.0
margin_top = 64.0
margin_right = 374.0
margin_bottom = 183.0

[node name="Label" type="Label" parent="LineEdit"]
margin_right = 205.0
margin_bottom = 120.0

[node name="Button" type="Button" parent="."]
margin_left = 175.0
margin_top = 215.0
margin_right = 345.0
margin_bottom = 271.0

[node name="Button2" type="Button" parent="."]
margin_left = 180.0
margin_top = 322.0
margin_right = 350.0
margin_bottom = 378.0

[node name="Button3" type="Button" parent="."]
margin_left = 180.0
margin_top = 414.0
margin_right = 350.0
margin_bottom = 470.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 474.0
margin_top = 67.0
margin_right = 603.0
margin_bottom = 474.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 129.0
margin_bottom = 409.0
autowrap = true

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 676.0
margin_top = 66.0
margin_right = 805.0
margin_bottom = 473.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="ColorRect2"]
margin_right = 133.0
margin_bottom = 409.0
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
